# opendesign-interview

./: .gitignore  README.md
OpenDesignRenderer/: CMakeLists.txt
OpenDesignRenderer/include/OpenDesignRenderer/: Image.h  ImageDimensions.h  PixelColor.h  PixelCoordinates.h  RenderingEngine.h
OpenDesignRenderer/src/: Image.cpp  ImageDimensions.cpp  PixelColor.cpp  PixelCoordinates.cpp  RenderingEngine.cpp  RgbaBitmap.cpp  RgbaBitmap.h
OpenDesignRenderer/test/: ImageTests.cpp  PixelColorTests.cpp  RenderingEngineTests.cpp
OpenDesignRenderer/test/image-files/: image-A.rgba  image-B.rgba  image-C.rgba  test-image-composite_640x480.rgba
image-files/: output-image.rgba
